--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
     flex-direction: column;
     gap: 3em; /* vahe elementide vahel */
     align-items: center;
+    background-colour: #b9fdb9
+    color: #6e14dc;
+    font-size: 22px;
+
+
 }
 /* #-ga viitame elemendile, millel on selline id */
 #photo {
@@ -32,7 +37,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #D9D9D9;
+    background-color: #79e08a;
     padding: 5em 1.5em 1.5em;
 }
 .icon {
@@ -46,11 +51,11 @@ iframe {
 button {
     width: 20em;
     border: none;
-    background-color: #D9D9D9;
+    background-color: #86fae8;
     padding: 2em;
 }
 
 button:hover {
-    background-color: #C8C6C6;
+    background-color: #88efd0;
     cursor: pointer;
 }
